--- a/style.css
+++ b/style.css
@@ -142,13 +142,16 @@ nav ul.menu a {
     font-weight: 500;
     font-size: 20px;
     padding-top: 40px;
-
+    padding-bottom: 0%;
+    padding-left: 30px;
+    padding-right: 30px;
     max-width: 100%;
     
 }
 
 .thais .texto {
     margin-top: 0px;
+    padding-top: 0%;
 }
 
 footer {
